--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.10",
     "pg": "^8.6.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.30.0"
   }
 }
